pointer arithmetic quiz

--- a/src/main/resources/org/mephi/cquiz/bundle_en.properties
+++ b/src/main/resources/org/mephi/cquiz/bundle_en.properties
@@ -4,3 +4,5 @@ loopsTitle = Loops
 loopsDescription = Knowledge of while, do-while and for loops
 pointersTitle = Pointers
 pointersDescription = Knowledge of pointers
+pointerArithmeticTitle = Pointer arithmetic
+pointerArithmeticDescription = Knowledge of pointer arithmetic
