Assembly reverse engineering task + misc refactorings
* bumped version
* Question templates: SimpleCOutput and CAsAsmInput
* Predefined questions are now stored as plaintext, rather
  than as seeds. This is more expensive, but simplifies storage
  of questions whose text contains information from program
  run (CAsAsmInput)
* Factored out GdbRunner

--- a/src/main/resources/org/mephi/cquiz/bundle_en.properties
+++ b/src/main/resources/org/mephi/cquiz/bundle_en.properties
@@ -6,3 +6,5 @@ pointersTitle = Pointers
 pointersDescription = Knowledge of pointers
 pointerArithmeticTitle = Pointer arithmetic
 pointerArithmeticDescription = Knowledge of pointer arithmetic
+x86DecryptionTitle = Reverse engineering simple encryption code
+x86DecryptionDescription = Knowledge of basic instructions and calling conventions
